# auto_cythonizer

./: README.md  build.py  pyproject.toml
auto_cythonizer/: __main__.py
examples/: comparison.py
examples/build_demo/: __init__.cp313-win_amd64.pyd
examples/cython_cache/build_demo/: __init__.c  demo.c
examples/demo/: demo.py
