[build-system]
requires = ["hatchling", "setuptools", "rich"]
build-backend = "hatchling.build"

[project]
name = "auto_cythonizer"
dynamic = ["version"]
description = "Ultimate Auto-Cythonizer CLI with Rich visual output"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["cli", "optimizer", "rich"]
authors = [
  { name = "pro-grammer-SD", email = "geniussantu1983@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = ["rich"]

[project.urls]
Documentation = "https://github.com/pro-grammer-SD/auto-cythonizer#readme"
Issues = "https://github.com/pro-grammer-SD/auto-cythonizer/issues"
Source = "https://github.com/pro-grammer-SD/auto-cythonizer"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["auto_cythonizer"]

[project.scripts]
auto-cythonizer = "auto_cythonizer.__main__:main"
